--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,13 +2,10 @@
 <html>
 <head>
   <title>HackerNewsP3</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  <h1> Hackernews </h1>
+
 </head>
 <body>
-
-<%= yield %>
 
 </body>
 </html>
