deleted password confirmation from form and digest from attr

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>HackerNewsP3</title>
-  <h1> Hackernews </h1>
-
-</head>
-<body>
-
-</body>
-</html>
+<h1> Hackernews </h1>
+<%= link_to("login", new_user_path) %>
