--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+<% if session[:user_id] %>
+  <%= link_to("logout", logout_path) %>
+<% end %>
 <body>
 
 <%= yield %>
