--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,24 @@
-<h1> Hackernews </h1>
-<%= link_to("login", new_user_path) %>
+<% if session[:user_id] %>
+ <%= User.find(session[:user_id]).username %>
+ <%= link_to("new post", posts_path) %>
+<% else %> 
+  <%= link_to("login", new_user_path) %>
+<% end %>
+
+ <h1> Hackernews </h1>
+
+<ol>
+
+  <% @posts.each do |post| %>
+
+    <li>
+      <p><%= post.title %>  (<%= post.link %>)</p>
+
+  <!-- the zero below needs to be changed -->
+      <p>0 points by <%= User.find(post.user_id).username%>  | comments</p>
+    </li>
+
+  <% end %>
+    
+</ol>
+
