--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,11 @@
 
     <li>
       <p><%= post.title %>  (<%= post.link %>)
-        <%= button_to("delete", post_path(post), method: :delete, confirm: "Are you sure?") %></p>
+        <% if session[:user_id] == post.user_id %>
+          <%= button_to("delete", post_path(post), method: :delete, confirm: "Are you sure?") %>
+          <%= button_to("edit", post_path(post), method: :get) %>
+        <% end %>
+      </p>
 
   <!-- the zero below needs to be changed -->
       <p>0 points by <%= User.find(post.user_id).username%>  | comments</p>
