we have created for you. many comments for post.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,6 @@
   <br>
   <%= f.text_field :link, placeholder: "link" %>
   <br>
-  <%= f.submit "post" %>
+  <%= f.submit "Create Post" %>
 <% end %>  
 
