--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -10,8 +10,12 @@
 
 <ul>
 <% @post.comments.each do |comment| %>
-    <li><%= comment.paragraph %>
-      <%= User.find(comment.user_id).username %>
+    <li><%= User.find(comment.user_id).username %> | link 
+      <%= comment.paragraph %>
+    <% if comment.user_id == session[:user_id] %>
+    <%= button_to("delete", post_comment_path(@post, comment), method: :delete, confirm: "Are you sure?") %>
+    <%= button_to("edit comment", post_comment_path(@post, comment), method: :get) %>
+    <% end %>  
     </li>
 <% end %>
 
