--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,9 +5,9 @@
 
 <%= form_for @post do |f| %>
 <%= f.error_messages %>
-  <%= f.text_field :title, placeholder: "title" %>
+  <%= f.text_field :title %>
   <br>
-  <%= f.text_field :link, placeholder: "link" %>
+  <%= f.text_field :link %>
   <br>
   <%= f.submit "update" %>
 <% end %>
